Update azure-pipelines-1.yml for Azure Pipelines
Changed:
export export JOB_NAME='$(system.teamProject)-Dynamic-Analysis'
to:
export export JOB_NAME='Verademo0001'

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -29,9 +29,11 @@ steps:
 #    echo $(DYNAMIC_USER)
 #  displayName: 'Display Variables'
 
+#   export export JOB_NAME='$(system.teamProject)-Dynamic-Analysis'
+
 - script: |
     export Dynamic_Target=$(DYNAMIC_TARGET)
-    export export JOB_NAME='$(system.teamProject)-Dynamic-Analysis'
+    export export JOB_NAME='Verademo0001'
     export VeraID=$(VERAID)
     export VeraPW=$(VERAPW)
     export Dynamic_User=$(DYNAMIC_USER)
